--- a/oversteer/main.ui
+++ b/oversteer/main.ui
@@ -347,6 +347,7 @@
                 </child>
                 <child>
                   <object class="GtkComboBox" id="device">
+                    <property name="width_request">200</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="active">0</property>
